Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/varargs/6993978/T6993978neg.out
T6993978neg.java:15:9: compiler.warn.unchecked.generic.array.creation: java.util.List<java.lang.String>[]
- compiler.err.warnings.and.werror
1 error
1 warning
